[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/UI/Icons/tower-svgrepo-com.svg" type="Texture" id=1]
[ext_resource path="res://Assets/Materials/Breathe Fire III.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/GUI/ItemButtons/ItemButton.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/UI/Icons/no.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.435294, 0.305882, 0.2, 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[node name="UI_Item" type="Control"]
margin_right = 270.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="."]
position = Vector2( 50, 40 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 109.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.917647, 0.803922, 0.701961, 1 )
text = "Towers"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.0
rect_min_size = Vector2( 15, 80 )
color = Color( 0.545098, 0.4, 0.282353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="noSign" type="Sprite" parent="."]
visible = false
position = Vector2( 50.3241, 39.7299 )
scale = Vector2( 0.0859375, 0.078125 )
texture = ExtResource( 4 )

[connection signal="gui_input" from="." to="." method="_on_UI_Item_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_UI_Item_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_UI_Item_mouse_exited"]
